--- a/app/components/memory-item/template.hbs
+++ b/app/components/memory-item/template.hbs
@@ -1,14 +1,14 @@
   <li class="etch-memories__item">
-    <img class="record" src="{{album.url}}"/>
+    <img class="record" src="{{memory.track.album.images.firstObject.url}}"/>
       <div class="etch-memories__item-content">
             <div class="content">
               <p class="">
-                {{#each track.artists as |artist|}}
+                {{#each memory.track.artists as |artist|}}
                   {{artist.name}}
                 {{/each}}
               </p>
 
-              <p>{{track.name}}</p>
+              <p>{{memory.track.name}}</p>
               <p>{{moment-from-now memory.createdAt "YYYY-MM-DD HH:mm:ss"}}</p>
               <br>
               {{emoji-character memory.emoji}} {{memory.text}}
