--- a/app/index/template.hbs
+++ b/app/index/template.hbs
@@ -3,7 +3,9 @@
 <div class="content">
   <h1>What is etch?</h1>
   <h2>A fun, simple app to track how music makes you feel! {{emoji-character "grinning"}}</h2>
-  <a class="button is-success is-large">Try etch now!</a>
+  {{#link-to "signup" class="button is-warning is-large"}}
+  Try etch now!
+  {{/link-to}}
 </div>
 
 
