--- a/app/admin/index/template.hbs
+++ b/app/admin/index/template.hbs
@@ -10,9 +10,11 @@
 
 
 <div class="memories">
-  {{#each model as |memory|}}
-    <div class="memory">
-      <img class="memory__img" src="http://www.comparevinyl.com/assets/blank_record-88f526f5bf343a5eba24e53c62acfe85.png"/>
+  {{#each model as | memory |}}
+  <div class="memory">
+    <div class="record record--with-center">
+      <img class="record__pic" src="{{memory.track.album.images.firstObject.url}}"/>
     </div>
+  </div>
   {{/each}}
 </div>
