--- a/app/components/memory-item/template.hbs
+++ b/app/components/memory-item/template.hbs
@@ -10,6 +10,7 @@
       </h1>
 
       <h2 class="subtitle is-6">{{memory.track.name}}</h2>
-      {{emoji-character memory.emoji}} {{memory.text}}
+      <p class="shit">{{emoji-character memory.emoji}} {{memory.text}}</p>
+
     </div>
   </li>
