--- a/app/admin/profile/template.hbs
+++ b/app/admin/profile/template.hbs
@@ -4,13 +4,12 @@
 
   <div class="profile">
     {{profile-pic user=model}}
+    <h2>{{model.name}}</h2>
+    <button type="button" class="upload__btn"{{action "choosePic" currentUser.user}}>Upload Profile Pic</button>
   </div>
   <div class="info content">
     <h1>@{{model.username}}</h1>
-    <h2>{{model.name}}</h2>
-    {{!-- <h2>Nashville, TN.</h2>
-    <h2>http://kittybotblog.io</h2> --}}
-    <button type="button" class="form__btn"{{action "choosePic" currentUser.user}}>Upload Profile Pic</button>
+
 
 
     {{#simple-form startingValues=model onsubmit=(action "update") as |formValues|}}
@@ -32,7 +31,7 @@
     <div class="record record--with-center">
       <img class="record__pic" src="{{memory.track.album.images.firstObject.url}}"/>
     </div>
-    <h2>{{memory.track.name}}</h2>
+    <h3>{{memory.track.name}}</h3>
   </div>
   {{/each}}
 
