--- a/app/styles/_profile.scss
+++ b/app/styles/_profile.scss
@@ -78,8 +78,10 @@
   padding: 3rem;
 }
 
-.form__btn {
-  border-radius: 10%;
+.upload__btn {
+  margin: 1rem;
+
+  border-radius: $primary;
   // height: 2rem;
   color: white;
   background: $warning;
@@ -90,3 +92,9 @@
 // .ember-text-field {
 //   margin: 1rem;
 // }
+
+h2 {
+  margin: 1rem;
+  display: flex;
+  justify-content: center;
+}
