--- a/app/styles/_profile.scss
+++ b/app/styles/_profile.scss
@@ -68,6 +68,7 @@
 
 .profile {
   flex: 1 500px;
+  text-align: center;
 }
 
 .info {
@@ -89,14 +90,21 @@
 
 }
 
+// .ember-text-field {
+//   margin: 1rem;
+// }
 
-h2 {
+.profile__username {
+
+}
+
+.profile__name {
   margin: 1rem;
   display: flex;
   justify-content: center;
 }
 
-h3 {
+.recent-memory__trackname {
   display: flex;
   justify-content: center;
 }
