styling through etch with a fine tooth comb

--- a/app/admin/index/template.hbs
+++ b/app/admin/index/template.hbs
@@ -1,9 +1,9 @@
 {{outlet}}
 
-<div class="content">
+<div class="content has-text-centered">
   <h1>What is etch?</h1>
   <h2>A fun, simple app to track how music makes you feel! {{emoji-character "grinning"}}</h2>
-  {{#link-to "etch" class="button is-success is-large"}}
+  {{#link-to "etch" class="button is-warning is-large"}}
     Let's get started!
   {{/link-to}}
 </div>
