--- a/app/index/template.hbs
+++ b/app/index/template.hbs
@@ -1,6 +1,6 @@
 {{outlet}}
 
-<div class="content">
+<div class="content has-text-centered">
   <h1>What is etch?</h1>
   <h2>A fun, simple app to track how music makes you feel! {{emoji-character "grinning"}}</h2>
   {{#link-to "signup" class="button is-warning is-large"}}
