style popular page

--- a/app/etch/create/template.hbs
+++ b/app/etch/create/template.hbs
@@ -1,4 +1,6 @@
-<div class="modal is-active">
+
+
+{{!-- <div class="modal is-active">
   <div class="modal-background"></div>
   <div class="modal-card">
     <header class="modal-card-head">
@@ -32,4 +34,4 @@
     {{/link-to}}
 
   </div>
-</div>
+</div> --}}
