--- a/app/styles/_signup.scss
+++ b/app/styles/_signup.scss
@@ -1,10 +1,10 @@
 .box-signup {
-  background: url(http://67.media.tumblr.com/676517ff93cbdafc35497eeceb2b96da/tumblr_ncghjfDPSW1tmjqrdo1_500.jpg);
+  background: url(http://oldtimewallpapers.com/wallpapers/201307/4c515447b4d0233b29194bb291f98755_medium.jpg);
   display: flex;
   justify-content: center;
   align-items: center;
   margin: 0 auto;
-  height: 338px;
+  height: 354px;
   width: 500px;
   margin-top: 65px;
 
