--- a/app/etch/song/template.hbs
+++ b/app/etch/song/template.hbs
@@ -4,7 +4,7 @@
   <div class="modal-background"></div>
   <div class="modal-card">
     <header class="modal-card-head">
-      <p class="modal-card-title">{{emoji-character "notes"}}Let's etch a memory!{{emoji-character "notes"}}</p>
+      <p class="modal-card-title has-text-centered">{{emoji-character "notes"}}Let's etch a memory!{{emoji-character "notes"}}</p>
     </header>
 
     <section class="modal-card-body">
