--- a/app/etch/template.hbs
+++ b/app/etch/template.hbs
@@ -9,12 +9,8 @@
 
   <div class="etch-info content">
     <h1>Step 1: {{emoji-character "notes"}} Hear a song {{emoji-character "notes"}}</h1>
-    <h1>Step 2: Click the {{emoji-character "cd"}} and search for your song</h1>
+    <h1>Step 2: Click the <img class="emojione" src="/images/record.png"/> and search for your song</h1>
     <h1>Step 3: Save your memory! {{emoji-character "heart"}}</h1>
   </div>
-
-  {{!-- {{#each model as |track|}}
-    {{track.name}}
-  {{/each}} --}}
 
 </div>
