--- a/app/styles/_friends.scss
+++ b/app/styles/_friends.scss
@@ -1,7 +1,7 @@
-.memory {
-  padding: 1rem;
-}
-
-.has-text-centered {
-  padding: 1rem;
-}
+// .memory {
+//   padding: 1rem;
+// }
+//
+// .has-text-centered {
+//   padding: 1rem;
+// }
