--- a/app/admin/friends/profile/template.hbs
+++ b/app/admin/friends/profile/template.hbs
@@ -7,8 +7,7 @@
   </div>
 
   <div class="info content">
-    <h1>@{{model.username}}</h1>{{!-- <h2>Nashville, TN.</h2>
-    <h2>http://kittybotblog.io</h2> --}}
+    <h1>@{{model.username}}</h1>
   </div>
 
 </div>
