added titles to timeline and friends page

--- a/app/admin/friends/index/template.hbs
+++ b/app/admin/friends/index/template.hbs
@@ -1,5 +1,10 @@
 {{outlet}}
 
+<div class="content has-text-centered">
+  <p class="title is-2">My Friends</p>
+  <p class="subtitle is-4">{{emoji-character "notes"}} Click to see what my freinds etched! {{emoji-character "dancers"}}</p>
+</div>
+
 <div class="memories">
 
   {{#each model as |friend|}}
