fixed merge conflict

--- a/app/admin/friends/index/template.hbs
+++ b/app/admin/friends/index/template.hbs
@@ -1,8 +1,8 @@
 {{outlet}}
 
 <div class="content has-text-centered">
-  <p class="title is-2">My Friends</p>
-  <p class="subtitle is-4">{{emoji-character "notes"}} Click to see what my freinds etched! {{emoji-character "dancers"}}</p>
+  <p class="title is-2">My Etch Friends</p>
+  <p class="subtitle is-4">{{emoji-character "mouse_three_button"}} Click their pic and check out what they're etching! {{emoji-character "notes"}}</p>
 </div>
 
 <div class="memories">
