--- a/app/admin/friends/profile/template.hbs
+++ b/app/admin/friends/profile/template.hbs
@@ -1,12 +1,9 @@
 {{outlet}}
 
-<div class="profile-container">
+<div class="content is-centered">
 
-  <div class="profile">
+  <div class="avatar">
     {{profile-pic user=model}}
-  </div>
-
-  <div class="info content">
     <h1>@{{model.username}}</h1>
   </div>
 
