recent memories styling and edit info button

--- a/app/styles/_profile.scss
+++ b/app/styles/_profile.scss
@@ -1,12 +1,6 @@
-.element {
-}
-
-@keyframes pulse {
-  0% {
-    transform: rotate(0deg);
-  }
-  100% {
-    transform: rotate(360deg);
+.profile-page {
+  > * + * {
+    margin-top: 4rem;
   }
 }
 
@@ -62,6 +56,4 @@
 .all-memories__button {
   display: flex;
   justify-content: center;
-  padding: 10rem;
-
 }
