--- a/app/admin/friends/profile/template.hbs
+++ b/app/admin/friends/profile/template.hbs
@@ -1,28 +1,3 @@
-{{outlet}}
-
-<div class="profile-container">
-
-  <div class="profile">
-    {{profile-pic user=model}}
-  </div>
-
-  <div class="info content">
-    <h1>@{{model.username}}</h1>
-  </div>
-
+<div class="section">
+  {{user-profile user=model}}
 </div>
-
-<div class="memories">
-
-  {{#each (take 4 (sort-by "createdAt:desc" model.memories)) as | memory |}}
-  <div class="memory">
-    <div class="record record--with-center">
-      <img class="record__pic" src="{{memory.track.album.images.firstObject.url}}"/>
-    </div>
-    <h2>{{memory.track.name}}</h2>
-  </div >
-
-  {{/each}}
-
-</div>
-<h3 class="title has-text-centered"> {{#link-to 'admin.friends.memories' model class="button is-large is-primary"}}All Memories{{/link-to}}</h3>
