--- a/app/admin/profile/template.hbs
+++ b/app/admin/profile/template.hbs
@@ -1,39 +1,3 @@
-{{outlet}}
-
-<div class="profile-container">
-
-  <div class="profile">
-    {{profile-pic user=model}}
-    <h2 class="profile__name">{{model.name}}</h2>
-    <button type="button" class="upload__btn"{{action "choosePic" currentUser.user}}>Upload Profile Pic</button>
-  </div>
-  <div class="info content">
-    <h1 class="profile__username">@{{model.username}}</h1>
-
-
-
-    {{#simple-form startingValues=model onsubmit=(action "update") as |formValues|}}
-      {{!-- {{input value=formValues.username placeholder="Username"}} --}}
-      {{!-- {{input value=formValues.email placeholder="Email"}} --}}
-      {{input value=formValues.location placeholder="Location"}}
-
-
-
-      <button>Submit</button>
-    {{/simple-form}}
-  </div>
+<div class="section">
+  {{user-profile user=model myProfile=true onUpdate=(action "update") onChoosePic=(action "choosePic")}}
 </div>
-
-<div class="memories">
-
-  {{#each (take 4 (sort-by "createdAt:desc" model.memories)) as | memory |}}
-  <div class="memory">
-    <div class="record record--with-center">
-      <img class="record__pic" src={{memory.track.album.images.firstObject.url}}>
-    </div>
-    <h3 class="recent-memory__trackname">{{memory.track.name}}</h3>
-  </div>
-  {{/each}}
-
-</div>
-<h3 class="all-memories__button"> {{#link-to 'admin.friends.memories' model class="button is-large is-primary"}}All Memories{{/link-to}}</h3>
