--- a/app/components/profile-pic/template.hbs
+++ b/app/components/profile-pic/template.hbs
@@ -1,4 +1,4 @@
-<div class="record {{if center "record--with-center"}}">
+<div class="record {{if center "record--with-center"}} {{if large "record--large"}}">
   {{#if user.profilePicUrl}}
     <img class="record__pic" src="{{user.fullProfilePicUrl}}"/>
     {{else}}
