--- a/app/styles/components/record.scss
+++ b/app/styles/components/record.scss
@@ -1,3 +1,12 @@
+@keyframes pulse {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
+
 .record {
   position: relative;
   display: block;
