add username to etch timeline

--- a/app/admin/friends/memories/template.hbs
+++ b/app/admin/friends/memories/template.hbs
@@ -1,6 +1,6 @@
 {{outlet}}
 <div class="content has-text-centered">
-  <p class="title is-2">My Etch Timeline</p>
+  <p class="title is-2">{{model.name}}'s Etch Timeline</p>
   <p class="subtitle is-4">{{emoji-character "notes"}} What have I been listening to? {{emoji-character "notes"}}</p>
 </div>
 
