--- a/app/admin/friends/index/template.hbs
+++ b/app/admin/friends/index/template.hbs
@@ -1,17 +1,15 @@
 {{outlet}}
 
 <div class="content has-text-centered">
-  <p class="title is-2">My Etch Friends</p>
+  <p class="title is-2">My etch Friends</p>
   <p class="subtitle is-4">{{emoji-character "mouse_three_button"}} Click their pic and check out what they're etching! {{emoji-character "notes"}}</p>
 </div>
 
-<div class="memories">
-
+<div class="accounts">
   {{#each model as |friend|}}
   {{#link-to "admin.friends.profile" friend class="memory"}}
     {{profile-pic user=friend}}
     <p class="has-text-centered subtitle">{{friend.username}}</p>
   {{/link-to}}
   {{/each}}
-
 </div>
