--- a/app/admin/index/template.hbs
+++ b/app/admin/index/template.hbs
@@ -12,7 +12,7 @@
 <div class="memories">
   {{#each model as | memory |}}
   <div class="memory">
-    <div class="record record--with-center">
+    <div class="record">
       <img class="record__pic" src="{{memory.track.album.images.firstObject.url}}"/>
     </div>
   </div>
