--- a/app/popular/template.hbs
+++ b/app/popular/template.hbs
@@ -9,7 +9,7 @@
 
     {{#each model as |track|}}
     <div class="pop-memory">
-      <div class="record">
+      <div class="record record--with-center">
         <img class="record__pic" src="{{track.album.images.firstObject.url}}"/>
       </div>
       <h1 class="content is-large">{{album.name}}{{track.name}}</h1>
