--- a/app/styles/components/record.scss
+++ b/app/styles/components/record.scss
@@ -16,7 +16,7 @@
 
   border-radius: 50%;
   overflow: hidden;
-  box-shadow: 2px 2px 2px #888888;
+  box-shadow: 2px 2px 2px rgba($black, 0.4);
 
   transition: transform 1s;
 
@@ -35,13 +35,12 @@
     left: 50%;
     content: "";
     display: block;
-    width: 3.5rem;
-    height: 3.5rem;
+    width: 3rem;
+    height: 3rem;
     background: $white;
     border-radius: 50%;
-    border: rgba($black, 1) solid 1.4rem;
+    border: rgba($black, 1) solid 1.3rem;
 
-    z-index: 1;
     box-shadow: inset 0.2rem 0.2rem 0.4rem rgba($black, 0.4);
 
     transform: translate(-50%, -50%);
