--- a/app/admin/friends/index/template.hbs
+++ b/app/admin/friends/index/template.hbs
@@ -5,7 +5,7 @@
   <p class="subtitle is-4">{{emoji-character "mouse_three_button"}} Click their pic and check out what they're etching! {{emoji-character "notes"}}</p>
 </div>
 
-<div class="accounts">
+<div class="memories">
   {{#each model as |friend|}}
   {{#link-to "admin.friends.profile" friend class="memory"}}
     {{profile-pic user=friend}}
