--- a/app/admin/index/template.hbs
+++ b/app/admin/index/template.hbs
@@ -1,15 +1,17 @@
 {{outlet}}
 
 <div class="content has-text-centered">
-  <h1>What is etch?</h1>
-  <h2>A fun, simple app to track how music makes you feel! {{emoji-character "grinning"}}</h2>
+  <h1 class="title is-1">What is etch?</h1>
+  <p class="subtitle is-3">A fun, simple app to track how music makes you feel! {{emoji-character "grinning"}}</p>
+  <img class="hipsters" src="http://favim.com/media/uploads/images/orig/140227/amor-estilo-fotos-hipster-Favim.com-1422933.jpg" alt="etch">
+
   {{#link-to "etch" class="button is-warning is-large"}}
     Let's get started!
   {{/link-to}}
 </div>
 
 
-<div class="memories">
+{{!-- <div class="memories">
   {{#each model as | memory |}}
   <div class="memory">
     <div class="record record--with-center">
@@ -17,4 +19,4 @@
     </div>
   </div>
   {{/each}}
-</div>
+</div> --}}
