--- a/app/styles/_main.scss
+++ b/app/styles/_main.scss
@@ -5,17 +5,6 @@ body {
   // font-family: 'Quicksand', sans-serif;
 }
 
-.record {
-  display: block;
-  margin: 0 auto;
-  // position: fixed;
-  // top: 50%;
-  // left: 50%;
-  // transform: translate(-50%, -50%);
-  // width: 50%;
-  max-width: 400px;
-}
-
 .memories {
   display: flex;
   flex-wrap: wrap;
@@ -26,7 +15,7 @@ body {
 }
 
 .memory {
-  flex: 1 200px;
+  flex: 1 25%;
   background: $white;
 }
 
