--- a/app/styles/components/record.scss
+++ b/app/styles/components/record.scss
@@ -10,7 +10,7 @@
 .record {
   position: relative;
   display: block;
-  max-width: 8rem;
+  max-width: 10rem;
   margin: 0 auto;
   // margin: 10rem auto;
 
@@ -41,6 +41,7 @@
     border-radius: 50%;
     border: rgba($black, 1) solid 1.3rem;
 
+    z-index: 1;
     box-shadow: inset 0.2rem 0.2rem 0.4rem rgba($black, 0.4);
 
     transform: translate(-50%, -50%);
