--- a/app/index/template.hbs
+++ b/app/index/template.hbs
@@ -1,8 +1,10 @@
 {{outlet}}
 
 <div class="content has-text-centered">
-  <h1>What is etch?</h1>
-  <h2>A fun, simple app to track how music makes you feel! {{emoji-character "grinning"}}</h2>
+  <h1 class="title is-1">What is etch?</h1>
+  <p class="subtitle is-3">A fun, simple app to track how music makes you feel! {{emoji-character "grinning"}}</p>
+  <img class="hipsters" src="http://favim.com/media/uploads/images/orig/140227/amor-estilo-fotos-hipster-Favim.com-1422933.jpg" alt="etch">
+
   {{#link-to "signup" class="button is-warning is-large"}}
   Try etch now!
   {{/link-to}}
