--- a/app/popular/template.hbs
+++ b/app/popular/template.hbs
@@ -8,7 +8,7 @@
   <div class="memories">
 
     {{#each model as |track index|}}
-    <div class="memory">
+    <a class="memory" href="https://open.spotify.com/track/{{track.id}}" target="_blank">
       <div class="record record--with-center">
         <img class="record__pic" src="{{track.album.images.firstObject.url}}"/>
       </div>
@@ -16,7 +16,7 @@
         <h2 class="title is-5">#{{index}} {{track.artists.[0].name}}</h2>
         <h2 class="subtitle is-6">{{track.name}}</h2>
       </div>
-    </div>
+    </a>
     {{/each}}
 
   </div>
