polished styling for overall app

--- a/app/admin/friends/memories/template.hbs
+++ b/app/admin/friends/memories/template.hbs
@@ -1,7 +1,7 @@
 {{outlet}}
 <div class="content has-text-centered">
-  <p class="title is-2">{{model.name}}'s etch Timeline</p>
-  <p class="subtitle is-4">{{emoji-character "notes"}} What have I been listening to? {{emoji-character "notes"}}</p>
+  <h1 class="title is-1">{{model.name}}'s Timeline</h1>
+  <p class="subtitle is-3">{{emoji-character "notes"}} Let's take an etch trip down memory lane {{emoji-character "notes"}}</p>
 </div>
 
 
