--- a/app/styles/_etch.scss
+++ b/app/styles/_etch.scss
@@ -4,7 +4,7 @@
   flex-wrap: wrap-reverse;
   align-items: center;
   justify-content: space-around;
-  margin-top: 6rem;
+  margin-top: 3rem;
 
   .album {
     max-width: 28rem;
@@ -20,4 +20,8 @@
 
 .etch-info {
   color: $primary;
+}
+
+.title.is-2 {
+  color: $warning;
 }
