--- a/app/styles/_login.scss
+++ b/app/styles/_login.scss
@@ -7,6 +7,10 @@
   box-shadow: 2px 2px 2px #888888;
 }
 
+// .title.is-1 {
+//    color: $gray;
+// }
+
 .checkbox {
   color: $white;
   font-weight: bold;
