--- a/app/admin/friends/index/template.hbs
+++ b/app/admin/friends/index/template.hbs
@@ -1,8 +1,8 @@
 {{outlet}}
 
 <div class="content has-text-centered">
-  <p class="title is-2">My etch Friends</p>
-  <p class="subtitle is-4">{{emoji-character "mouse_three_button"}} Click their pic and check out what they're etching! {{emoji-character "notes"}}</p>
+  <h1 class="title is-1">My etch Friends</h1>
+  <p class="subtitle is-3">{{emoji-character "mouse_three_button"}} Click their pic and check out what they're etching! {{emoji-character "notes"}}</p>
 </div>
 
 <div class="memories">
