--- a/app/etch/template.hbs
+++ b/app/etch/template.hbs
@@ -1,4 +1,8 @@
 {{outlet}}
+
+<h1 class="title is-1 has-text-centered">{{emoji-character ":musical_score"}}Let's etch!</h1>
+<p class="subtitle is-3 has-text-centered">Follow the steps to log your first memory...</p>
+
 <div class="etch-container">
 
   <div class="hero">
