--- a/app/login/template.hbs
+++ b/app/login/template.hbs
@@ -7,7 +7,7 @@
     <p class="control has-icon">
       {{input value=formValues.email class="input is-success" type="text" placeholder="Email"}}
 
-      <i class="fa fa-user"></i>
+      <i class="fa fa-envelope"></i>
     </p>
 
     <label class="label"></label>
