--- a/app/popular/template.hbs
+++ b/app/popular/template.hbs
@@ -1,8 +1,8 @@
 {{outlet}}
 
-<div class="content has-text-centered is-large">
-  <h1>Most Popular</h1>
-  <p>Check out the top 10 most popular songs on etch right now!</p>
+<div class="content has-text-centered">
+  <h1 class="title is-1">Most Popular {{emoji-character "crown"}}</h1>
+  <p class="subtitle is-3">Check out the top 10 most popular songs on etch right now!</p>
 </div>
 
   <div class="memories">
