--- a/app/styles/_map.scss
+++ b/app/styles/_map.scss
@@ -1,8 +1,18 @@
 .leaflet-container {
-  margin-top: 2rem;
-  height: 40rem;
-  width: 100%;
+  height: 30rem;
+  width: 70%;
   border-radius: 10px;
   -webkit-mask-image: -webkit-radial-gradient(circle, white, black);
   overflow: hidden;
+}
+
+.map {
+  display: flex;
+  justify-content: center;
+}
+
+.map-button {
+display: flex;
+justify-content: center;
+margin-top: 1rem;
 }
