--- a/app/popular/template.hbs
+++ b/app/popular/template.hbs
@@ -13,7 +13,7 @@
         <img class="record__pic" src="{{track.album.images.firstObject.url}}"/>
       </div>
       <div class="memory__content has-text-centered">
-        <h2 class="title is-5">#{{index}} {{track.artists.[0].name}}</h2>
+        <h2 class="title is-5">#{{add index 1}} {{track.artists.[0].name}}</h2>
         <h2 class="subtitle is-6">{{track.name}}</h2>
       </div>
     </a>
